[package]
name = "tui-dungeon-raid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
ratatui = "0.20"
dungeon-raid-core = { git = "https://github.com/Brian-Catcow-B/dungeon-raid-core" }
